fixed notes overflowing container issue

--- a/lambda-notes/src/components/NotesContainer/NotesContainer.css
+++ b/lambda-notes/src/components/NotesContainer/NotesContainer.css
@@ -7,8 +7,9 @@
     justify-content: space-between;
     padding: 73px 32px 0px 32px;
     box-sizing: border-box;
-    /* height: 100%; */
-    height: 100vh;
+    height: 100%;
+    /* height: 100vh; */
+    overflow: scroll;
 }
 @media (max-width: 400px) {
     .notes-container {
@@ -16,6 +17,7 @@
         flex-direction: column;
         align-items: center;
         padding-top: 40px;
+        height: 100%;
     }
 }
 .your-notes {
